--- a/src/app/shared/components/raight-sidebar/raight-sidebar/raight-sidebar.component.css
+++ b/src/app/shared/components/raight-sidebar/raight-sidebar/raight-sidebar.component.css
@@ -33,6 +33,11 @@
 .nav-link:focus {
   color:var(--color-secundario);
 }
+button{
+  background-color:var(--color-secundario);
+  width: 100%;
+
+}
 .navbar-brand:focus {
   color:white;
 }
@@ -55,3 +60,4 @@ a:hover{
     color:var(--color-secundario);
     background-size: 50% 2px;
 }
+
