--- a/src/app/modules/nosotros/pages/nosotros-page/nosotros-page.component.css
+++ b/src/app/modules/nosotros/pages/nosotros-page/nosotros-page.component.css
@@ -3,6 +3,10 @@
     display: flex;
     height: calc(100vh - 300px);
 }
+section{
+    margin-top: 70px;
+
+}
 
 .container-productos{
     display: flex;
@@ -178,3 +182,15 @@
     opacity: .2;
 }
 
+@media screen and (max-width: 741px) {
+    section{
+        /* margin: 70px 3px 90% 5px; */
+        margin-top: 70px;
+    }
+}
+
+@media screen and (max-width: 441px) {
+    section{
+        margin: 70px -45px -100vh 0px;
+    }
+}
