--- a/src/app/modules/sucursales/pages/sucursales-page/sucursales-page.component.css
+++ b/src/app/modules/sucursales/pages/sucursales-page/sucursales-page.component.css
@@ -1,3 +1,9 @@
+section{
+  margin: 10px 3px 0px 5px;
+  margin-top: 70px;
+  /* margin: 10px 3px 90% 5px; */
+}
+
 h6{
     text-transform: uppercase;
     text-align: center;
@@ -12,4 +18,22 @@ h1{
 
 .card{
   background-color: var(--color-background);  
+}
+
+@media screen and (max-width: 741px) {
+  section{
+    /* margin: 10px 3px 30px 5px; */
+    margin: 50px 3px 90% 5px;
+    margin-top: 20%;
+
+}
+}
+
+@media screen and (max-width: 441px) {
+  section{
+      /* margin: 10px 3px 30px 5px; */
+      margin: 10px 3px 100% 5px;
+      margin-top: 25%;
+
+  }
 }
