--- a/src/app/modules/sucursales/pages/sucursales-page/sucursales-page.component.html
+++ b/src/app/modules/sucursales/pages/sucursales-page/sucursales-page.component.html
@@ -1,5 +1,5 @@
 <section [@routerTransition]>
-    <div class="container mt-5 md-flex">
+    <div class="container mt-5 md-flex s">
     <div class="row">
     <div class="col-lg-8 offset-lg-2">
         <div class="">
