--- a/src/app/shared/components/raight-sidebar/raight-sidebar/raight-sidebar.component.html
+++ b/src/app/shared/components/raight-sidebar/raight-sidebar/raight-sidebar.component.html
@@ -4,8 +4,10 @@
     <a class="nav-link mt-5 "  [routerLink]="['/private']"> Private</a><br>
     <a class="nav-link "  [routerLink]="['/private/tarjeta']"> Administración de Tarjetas</a><br>
     <a class="nav-link "  [routerLink]="['/private/servicios']"> Administración Servicios</a><br>
+    <a class="nav-link "  [routerLink]="['/private/sucursales']"> Administración Sucursales</a><br>
     </mat-drawer>
-        <button (click)="drawer.toggle();">▶️</button>
+        <button (click)="drawer.toggle();" (click)="changeIcon()"><div *ngIf="clickChange" ><i class="uil uil-angle-right-b"></i></div>
+          <div *ngIf="!clickChange" ><i class="uil uil-angle-left-b"></i></div></button>
         <router-outlet></router-outlet>
 </mat-drawer-container>
 </div>
