--- a/src/app/shared/components/side-bar/side-bar.component.html
+++ b/src/app/shared/components/side-bar/side-bar.component.html
@@ -19,7 +19,7 @@
           <a class="nav-link set-sidebar-text" routerLink="/contactanos" >Contáctanos</a>
           <a (click)="logout()"  class="TituloAPP  nav-link" *ngIf="estadoLogueado()" routerLink="/inicio" >Cerrar sesión</a>
         <a class="TituloAPP  nav-link" aria-current="page" routerLink="/login" *ngIf="!estadoLogueado()">Acceder</a>
-¿        </div>
+        </div>
       </div>
     </div>
   </nav>
