--- a/src/app/shared/components/raight-sidebar/raight-sidebar/raight-sidebar.component.html
+++ b/src/app/shared/components/raight-sidebar/raight-sidebar/raight-sidebar.component.html
@@ -5,6 +5,7 @@
     <a class="nav-link "  [routerLink]="['/private/tarjeta']"> Administración de Tarjetas</a><br>
     <a class="nav-link "  [routerLink]="['/private/servicios']"> Administración Servicios</a><br>
     <a class="nav-link "  [routerLink]="['/private/sucursales']"> Administración Sucursales</a><br>
+    <a class="nav-link "  [routerLink]="['/private/nosotros']"> Administración Nosotros</a><br>
     </mat-drawer>
         <button (click)="drawer.toggle();" (click)="changeIcon()"><div *ngIf="clickChange" ><i class="uil uil-angle-right-b"></i></div>
           <div *ngIf="!clickChange" ><i class="uil uil-angle-left-b"></i></div></button>
