--- a/src/app/modules/sucursales/admin-pages/admin-sucursales-page/admin-sucursales-page.component.html
+++ b/src/app/modules/sucursales/admin-pages/admin-sucursales-page/admin-sucursales-page.component.html
@@ -2,8 +2,8 @@
   <div class="container mt-5 md-flex s" [@routerTransition]>
     <div class="row">
       <div class="col-6">
-     <h5 class="titulo text-start"> <i class="uil uil-clipboard-alt"></i> Listado de  Servicios </h5>
-    </div>  <!-- <br> -->
+     <h5 class="titulo text-start"> <i class="uil uil-clipboard-alt"></i> Listado de  Sucursales </h5>
+    </div>  
     <div class="col-6 justify-content-end">
            <div class="ibox-title mt-5  ">
              <!-- <h5 class="titulo text-center">   Listado de  Servicios </h5> -->
@@ -17,16 +17,12 @@
         </div>
       </div>
         <div class="ibox-content">
-          <div class="row m-b-sm m-t-sm justify-content-center">
+          <div class="row m-b-sm m-t-sm ">
 
-            <div class="col-md-12 ">
+            <div class="col-md-12 justify-content-center ">
       
               <div class="input-group mb-2" *ngIf="showSearchControl">
-                <span class="input-group-btn">
-                  <button type="button" class="btn btn-white btn-primary btn-white btn-sm " (click)="clearSearch()">
-                    <i class="uil uil-sync"></i>
-                  </button>
-                </span>
+
                 <!-- <select [(ngModel)]="searchField" name="CampoBusqueda" placeholder="Campo de búsqueda" class="ui fluid search selection dropdown ">
                   <option *ngFor="let item of fields" [value]="item.name">
                     {{item.display}}
@@ -40,9 +36,14 @@
                 <!-- <input type="text" placeholder="Buscar" class="input-sm form-control searchControlSS" type="search" name="searchControl"
                   #searchControl="ngModel" [(ngModel)]="searchText.value" maxlength="50" results="5" (keypress)="searchOnKeyPress($event)"
                   appTextHelper /> -->
-                <span class="input-group-btn">
+                <!-- <span class="input-group-btn">
                   <button type="button" class="btn btn-sm btn-primary  btn-white btnListado" (click)="search()">
                     <i class="uil uil-search"></i>
+                  </button>
+                </span> -->
+                <span class="input-group-btn">
+                  <button type="button" class="btn  btn-primary  btn-sm " (click)="clearSearch()">
+                    <i class="uil uil-sync"></i>
                   </button>
                 </span>
                 <!-- <div class="pull-right" style="margin-left: -30px;" >
