--- a/src/app/shared/components/footrer/footrer.component.html
+++ b/src/app/shared/components/footrer/footrer.component.html
@@ -1,20 +1,20 @@
 <footer id="footer">
 <div class="container-fluid foot-bar text-center">
     <div class="row "> 
-     <div class="col-6 col-md-3 sociales-metodo">
+     <div class="col-6 col-sm-3 sociales-metodo">
           <i class="uil uil-twitter"></i>
           <span>@lavantell_clothes</span>
      </div>
-      <div class="col-6 col-md-3 sociales-metodo">
+      <div class="col-6 col-sm-3 sociales-metodo">
           <i class="uil uil-facebook-f"></i>
         <span>lavantell Clothes clean</span>
       </div>
-      <div class="col-6 col-md-3 sociales-metodo">
+      <div class="col-6 col-sm-3 sociales-metodo">
           <i class="uil uil-whatsapp"></i>
           <span> +3016969550</span>
 
         </div>
-        <div class="col-6 col-md-3 sociales-metodo">
+        <div class="col-6 col-sm-3 sociales-metodo">
           <i class="uil uil-envelope-alt"></i>
           <span>lavantell@hotmail.com</span>
      </div>
