--- a/src/app/modules/auth/pages/login-pages/login-pages.component.css
+++ b/src/app/modules/auth/pages/login-pages/login-pages.component.css
@@ -163,3 +163,7 @@ h4{
                 box-shadow: 0 0 0px 1000px white inset;              
       
     }
+
+    /* .form-action{
+      display: block;
+    } */
