--- a/src/app/modules/auth/pages/login-pages/login-pages.component.html
+++ b/src/app/modules/auth/pages/login-pages/login-pages.component.html
@@ -35,7 +35,8 @@
             </mat-form-field>
         </p>
         <div>
-            <button class="" type="submit" [disabled]="formLogin.invalid"   (click)="login()" mat-raised-button mat-button> Iniciar Sesión</button>
+            <button class="" type="submit" [disabled]="formLogin.invalid"   (click)="login()" 
+            mat-raised-button mat-button>Iniciar Sesión</button>
         </div>
     </form>
     </mat-card-content>
